--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,11 +28,13 @@ body {
    width: 100%;
    height: 100%;
    /* background-color: aqua; */
-   background-image: url("./images/1351760.png");
-   background-repeat: no-repeat;
-   background-size: 50% 50vh;
-   background-position:top right;
+   /* background-image: url("./images/1351760.png"); */
+   /* background-repeat: no-repeat; */
+   /* background-size: 50% 50vh; */
+   /* background-position:top right; */
 }
+
+
 
 
 
