--- a/CSS/box model/style.css
+++ b/CSS/box model/style.css
@@ -65,7 +65,7 @@ div{
 
 
 /* Margin */
-
+/* 
 #margin-heading{
     font-size: 50px;
     color: black;
@@ -77,7 +77,6 @@ div{
     color: black;
     width: 1200px;
     padding: 50px;
-    /* margin: 100px 100px 0px 150px; */
     margin: 50px auto;
 }
 #section-1{
@@ -93,7 +92,7 @@ div{
     color: black;
     border: 2px solid black;
 }
-
+ */
 
 
 
