--- a/CSS/box shadow/style.css
+++ b/CSS/box shadow/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: black;
+    /* background-color: black; */
 }
 
 /* box-shadow */
@@ -20,13 +20,18 @@ div{
 } */
 
 /* drop shadow */
+/* 
 div{
-    
+    width: 500px;
+    height: 500px;
+    margin: 100px auto;
 }
-
 img {
-    
-}
+    margin: 0 auto;
+    height: 100%;
+    filter: drop-shadow(0 0 20px black);
+} 
+*/
 
 
 
